# SuperMuseum

./: .gitignore  .vercelignore
backend/: .env.example  README.md  jiosaavn-api.json  main.py  pyproject.toml  requirements.txt  vercel.json
backend/agents/: __init__.py  base_agent.py  conversation_agent.py  emotion_agent.py  language_router.py  music_agent.py  rag_agent.py  tone_adapter.py
backend/api/: __init__.py  chat.py  health.py  music.py  tts.py
backend/config/: __init__.py  config.yaml  prompts.py  settings.py
backend/conversational_bot/retriever/: retrieval.py
backend/data/cultural_knowledge/: sample_temple_ritual.txt
backend/docs/: SARVAM_INTEGRATION.md  SARVAM_QUICKSTART.md
backend/exception/: __init__.py  custom_exception.py
backend/logger/: __init__.py
backend/models/: __init__.py  enums.py  schemas.py
backend/scripts/: decode_audio.py  saavn_http_client_example.py  seed_chroma.py  test_music_workflow.py  test_saavn.py  test_sarvam.py  test_voice_endpoint.sh
backend/services/: __init__.py  emotion_service.py  saavn_service.py  sarvam_service.py  vectorstore_service.py  whisper_service.py
backend/tests/: __init__.py  test_agents.py  test_vectorstore.py  test_whisper_service.py
backend/utils/: __init__.py  audio_processor.py  cache.py  config_loader.py  language_utils.py  model_loader.py
backend/workflows/: __init__.py  chat_workflow.py  music_workflow.py
frontend/: package-lock.json  package.json
frontend/app/: app.css  root.tsx  routes.ts
frontend/app/components/: AppHeader.tsx  Chat.tsx  ExhibitCard.tsx  ExhibitModal.tsx  (+9 more)
(+9 files in other folders)
